[package]
name = "ulid"
version = "1.2.1"
authors = ["dylanhart <dylan96hart@gmail.com>"]
edition = "2018"

license = "MIT"
readme = "README.md"

description = "a Universally Unique Lexicographically Sortable Identifier implementation"
keywords = ["ulid", "uuid", "sortable", "identifier"]

repository = "https://github.com/dylanhart/ulid-rs"

[features]
default = ["std"]
std = ["rand"]
postgres = ["dep:postgres-types", "dep:bytes"]
rkyv = ["dep:rkyv"]

[dependencies]
serde = { version = "1.0", optional = true }
rand = { version = "0.9", optional = true }
uuid = { version = "1.1", optional = true }
postgres-types = { version = "0.2.6", optional = true }
bytes = { version = "1.4.0", optional = true }
rkyv = { version = "0.8.10", optional = true }

[target.wasm32-unknown-unknown.dependencies]
web-time = "1"

[dev-dependencies]
bencher = "0.1"
serde_derive = "1.0"

[target.wasm32-unknown-unknown.dev-dependencies]
getrandom = { version = "0.3.1", features = ["wasm_js"] }
wasm-bindgen-test = "0.3"

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false

[workspace]
members = ["cli"]

[package.metadata.docs.rs]
all-features = true
